--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <section>
     <header class="container">
         <h1>Cameron Smith</h1>
+        <div class="bio">Message about myself</div>
         <div class="bio">Basic site created to explore and learn web hosting, load balancing, and server administration. Running Ubuntu 22.04 on three small cloud servers, using Apache2 as the web server, MySQL for database management, and HAProxy for load balancing.</div>
         <img class="bio" src="img/topology.svg" type="image/svg+xml" style="max-width:100%;" />
         <div class="bio">Looking for a job :) Interested in Networking, System Administration and other related fields.</div>
