--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <section>
         <header class="container">
-            <h1>Hi, I'm Cameron</h1>
+            <h1>Hi, I'm Cameron dev</h1>
             <div class="bio">I'm currently doing my HND in Computer Networking at Glasgow Clyde College while self-learning docker, virtualization and linux server administration.</div>
             <div class="bio">I created this site to explore and learn web hosting, load balancing, and server administration. Running Ubuntu 22.04 on three small cloud servers, using Apache2 as the web server, MySQL for database management, and HAProxy for load balancing.</div>
             <img class="bio" src="img/topology.svg" type="image/svg+xml" style="max-width:100%;" />
