--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header class="container">
             <h1>Hi, I'm Cameron</h1>
             <div class="bio">I'm currently doing my HND in Computer Networking at Glasgow Clyde College while self-learning docker, virtualization and linux server administration.</div>
-            <div class="bio">I created this site to explore and learn web hosting, load balancing, and version control. Running Ubuntu 22.04 on three small cloud servers, using Apache2 as the web server, MySQL for database management, and HAProxy for load balancing.</div>
+            <div class="bio">I created this site to explore and learn web hosting, load balancing, and git version control. Running Ubuntu 22.04 on three small cloud servers, using Apache2 as the web server, MySQL for database management, and HAProxy for load balancing.</div>
             <img class="bio" src="img/topology.svg" type="image/svg+xml" style="max-width:100%;" />
             <div class="bio">I'm looking for a job :) Interested in Networking, System Administration and other related fields.</div>
             <div class="links">
